yourmom_bayern/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yourmom-bayern
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: yourmom-bayern
