yourmom_bayern/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: yourmom-bayern
  namespace: default
spec:
  tls:
    - hosts:
        - yourmom.bayern
      secretName: yourmom-bayern-cert
  rules:
    - host: "yourmom.bayern"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: yourmom-bayern
                port:
                  number: 80
